--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 .cell {
   padding : 10px 10px 10px 10px;
-  background-color: lightblue;
+  background-color: springGreen;
   }
 
-h1 {
+body {
   font-family: "Lucida Console", "Courier New", monospace;
 }
